--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "chokidar": "^3.6.0",
+    "csv": "^6.3.6",
     "md5": "^2.3.0",
     "moment": "^2.30.1",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
