--- a/package.json
+++ b/package.json
@@ -5,22 +5,29 @@
   "main": "index.ts",
   "scripts": {
     "start": "ts-node index.ts",
+    "dev": "ts-node-dev --respawn --clear index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/md5": "^2.3.5",
     "@types/node": "^24.3.1",
     "@typescript-eslint/eslint-plugin": "^8.42.0",
     "@typescript-eslint/parser": "^8.42.0",
     "eslint": "^9.35.0",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "axios": "^1.11.0",
     "chokidar": "^3.6.0",
     "csv": "^6.3.6",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
     "md5": "^2.3.0",
     "moment": "^2.30.1",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
